--- a/cv.html
+++ b/cv.html
@@ -3,12 +3,33 @@
 <head>
 <title>Page Title</title>
 <link rel="stylesheet" type="text/css" href="cv.css" /> 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
 </head>
 <body>
+    <div class="container">
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+    <div class="row"  style="height: 200px">
+        <div class="col bg-warning" >1 of 2
+
+
+
+        </div>
+        <div class="col bg-success">2 of 2
+
+
+
+            
+        </div>
+      </div>
+
+    <div class="row"  style="height: 1000px">
+        <div class="col bg-success">1 of 2</div>
+        <div class="col bg-warning">2 of 2</div>
+      </div>
+    </div>
+
+
 
 </body>
 </html>
