exercice inline et in block

--- a/cv.html
+++ b/cv.html
@@ -100,6 +100,20 @@
     </div>
 
 
+<!--exercice inline in block -->
+
+<div style="width: 100%" >
+    <div class="trente" style="display: inline; background-color: blue; ">bonjour</div> 
+    <div style="display: inline;">bonjour</div>
+    <div style="display: inline; background-color: blue;">bonjour</div>
+</div>
+
+<div >
+    <div >bonjour</div>
+    <div >bonjour</div>
+    <div >bonjour</div>
+</div>
+
 
 </body>
 
